--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Xskipper repository
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Cache Coursier local repository
           uses: actions/cache@v2
           with:
