--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # Copyright 2021 IBM Corp.
 # SPDX-License-Identifier: Apache-2.0
 
-name: build
+name: "build"
 
 on:
   push:
@@ -34,12 +34,12 @@ jobs:
       - name: Checkout Xskipper repository
         uses: actions/checkout@v2
       - name: Cache Coursier local repository
-          uses: actions/cache@v2
-          with:
-            path: ~/.cache/coursier
-            key: coursier-${{ hashFiles('**/pom.xml', '**/plugins.sbt') }}
-            restore-keys: |
-              coursier-
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/coursier
+          key: coursier-${{ hashFiles('**/pom.xml', '**/plugins.sbt') }}
+          restore-keys: |
+            coursier-
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
