--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,6 @@ jobs:
         run: |
           python3.7 -m pip install pyspark>=3.0.0
       - name: Run Scala tests
-        run: ./build/sbt "+ test"
+        run: build/sbt "+ test"
       - name: Run Python tests
         run: python3.8 run-tests.py
