fix build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,11 @@ jobs:
       - name: Install Python packages (Python 3.7)
         run: |
           python3.7 -m pip install pyspark>=3.0.0
+      - name: Run sbt clean
+        run: sbt ++2.12.8 clean
+      - name: Run sbt compile
+        run: sbt ++2.12.8 compile
       - name: Run Scala tests
-        run: build/sbt "+ test"
+        run: sbt ++2.12.8 test
       - name: Run Python tests
         run: python3.8 run-tests.py
