--- a/.gitattributes
+++ b/.gitattributes
@@ -3,9 +3,9 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-/build             export-ignore
-/build/**          export-ignore
-/python/doc/**     export-ignore
-/site              export-ignore
-/site/**           export-ignore
-/notebooks/**      export-ignore
+/build             export-ignore linguist-vendored=false
+/build/**          export-ignore linguist-vendored=false
+/python/doc/**     export-ignore linguist-vendored=false
+/site              export-ignore linguist-vendored=false
+/site/**           export-ignore linguist-vendored=false
+/notebooks/**      export-ignore linguist-vendored=false
