--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -5,7 +5,7 @@
 
 # Project information
 site_name: Xskipper
-site_url: https://xskipper-io.github.io/xskipper/
+site_url: https://xskipper.io
 site_description: Extensible Data Skipping Framework for Apache Spark
 site_author: Xskipper team
 
