--- a/.github/workflows/publish_snapshot.yml
+++ b/.github/workflows/publish_snapshot.yml
@@ -1,7 +1,7 @@
 # Copyright 2021 IBM Corp.
 # SPDX-License-Identifier: Apache-2.0
 
-name: Publish Snapshot
+name: "Publish Snapshot"
 
 on:
   workflow_dispatch:
@@ -30,9 +30,9 @@ jobs:
           restore-keys: |
             snapshot-maven-
       - name: Set up JDK 1.8
-          uses: actions/setup-java@v1
-          with:
-            java-version: 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
       - name: Publish snapshot
         env:
           ASF_USERNAME: ${{ secrets.NEXUS_USER }}
