--- a/.github/workflows/publish_snapshot.yml
+++ b/.github/workflows/publish_snapshot.yml
@@ -40,4 +40,6 @@ jobs:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           GIT_REF: ${{ matrix.branch }}
-        run: sbt ++2.12.8 publishSigned
+        run: |
+        echo $PGP_SECRET | base64 --decode | gpg --batch --import
+        sbt ++2.12.8 publishSigned
