--- a/.github/workflows/publish_snapshot.yml
+++ b/.github/workflows/publish_snapshot.yml
@@ -33,6 +33,22 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Install Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+          architecture: x64
+      - name: Install Python packages (Python 3.7)
+        run: |
+          python3.7 -m pip install pyspark>=3.0.0
+      - name: Run sbt clean
+        run: sbt ++2.12.8 clean
+      - name: Run sbt compile
+        run: sbt ++2.12.8 compile
+      - name: Run Scala tests
+        run: sbt ++2.12.8 test
+      - name: Run Python tests
+        run: python3.7 run-tests.py
       - name: Publish snapshot
         env:
           NEXUS_USER: ${{ secrets.NEXUS_USER }}
