--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
     inputs:
       release-version:
         description: 'The release version to be used'
-        required: true
+        required: false
       next-version:
         description: 'The next version to be used (make sure to use SNAPSHOT)'
         required: false
@@ -41,7 +41,10 @@ on:
           run: sbt ++2.12.8 test
         - name: Run Python tests
           run: python3.7 run-tests.py
-        - name: Release
+        - if: |
+          github.event.inputs.release-version != '' &&
+          github.event.inputs.next-version != '' &&
+          name: Release
           env:
             NEXUS_USER: ${{ secrets.NEXUS_USER }}
             NEXUS_PW: ${{ secrets.NEXUS_PW }}
@@ -50,7 +53,20 @@ on:
             GIT_REF: ${{ matrix.branch }}
           run: |
             echo $PGP_SECRET | base64 --decode | gpg --batch --import
-            sbt release release-version ${{ github.event.inputs.release-version }}
+            sbt release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}
+        - if: |
+          github.event.inputs.release-version == '' &&
+          github.event.inputs.next-version == '' &&
+          name: Release
+          env:
+            NEXUS_USER: ${{ secrets.NEXUS_USER }}
+            NEXUS_PW: ${{ secrets.NEXUS_PW }}
+            PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+            PGP_SECRET: ${{ secrets.PGP_SECRET }}
+            GIT_REF: ${{ matrix.branch }}
+          run: |
+            echo $PGP_SECRET | base64 --decode | gpg --batch --import
+            sbt release with-defaults
         - name: Draft Release
           uses: release-drafter/release-drafter@v5
           env:
