--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,61 +13,60 @@ on:
         description: 'The next version to be used (make sure to use SNAPSHOT)'
         required: false
 
-  jobs:
-    # Build: build xskipper and run scala tests
-    publish:
-      if: github.repository == 'xskipper-io/xskipper'
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout Xskipper repository
-          uses: actions/checkout@v2
-        - name: Set up JDK 1.8
-          uses: actions/setup-java@v1
-          with:
-            java-version: 1.8
-        - name: Install Python 3.7
-          uses: actions/setup-python@v2
-          with:
-            python-version: 3.7
-            architecture: x64
-        - name: Install Python packages (Python 3.7)
-          run: |
-            python3.7 -m pip install pyspark>=3.0.0
-        - name: Run sbt clean
-          run: sbt ++2.12.8 clean
-        - name: Run sbt compile
-          run: sbt ++2.12.8 compile
-        - name: Run Scala tests
-          run: sbt ++2.12.8 test
-        - name: Run Python tests
-          run: python3.7 run-tests.py
-        - if: |
-            github.event.inputs.release-version != '' &&
-            github.event.inputs.next-version != ''
-          name: Release
-          env:
-            NEXUS_USER: ${{ secrets.NEXUS_USER }}
-            NEXUS_PW: ${{ secrets.NEXUS_PW }}
-            PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-            PGP_SECRET: ${{ secrets.PGP_SECRET }}
-            GIT_REF: ${{ matrix.branch }}
-          run: |
-            echo $PGP_SECRET | base64 --decode | gpg --batch --import
-            sbt release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}
-        - if: |
-            github.event.inputs.release-version == '' &&
-            github.event.inputs.next-version == ''
-          name: Release
-          env:
-            NEXUS_USER: ${{ secrets.NEXUS_USER }}
-            NEXUS_PW: ${{ secrets.NEXUS_PW }}
-            PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-            PGP_SECRET: ${{ secrets.PGP_SECRET }}
-            GIT_REF: ${{ matrix.branch }}
-          run: |
-            echo $PGP_SECRET | base64 --decode | gpg --batch --import
-            sbt release with-defaults
-        - name: Draft Release
-          uses: release-drafter/release-drafter@v5
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+jobs:
+  release:
+    if: github.repository == 'xskipper-io/xskipper'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Xskipper repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Install Python 3.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+          architecture: x64
+      - name: Install Python packages (Python 3.7)
+        run: |
+          python3.7 -m pip install pyspark>=3.0.0
+      - name: Run sbt clean
+        run: sbt ++2.12.8 clean
+      - name: Run sbt compile
+        run: sbt ++2.12.8 compile
+      - name: Run Scala tests
+        run: sbt ++2.12.8 test
+      - name: Run Python tests
+        run: python3.7 run-tests.py
+      - if: |
+          github.event.inputs.release-version != '' &&
+          github.event.inputs.next-version != ''
+        name: Release
+        env:
+          NEXUS_USER: ${{ secrets.NEXUS_USER }}
+          NEXUS_PW: ${{ secrets.NEXUS_PW }}
+          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          GIT_REF: ${{ matrix.branch }}
+        run: |
+          echo $PGP_SECRET | base64 --decode | gpg --batch --import
+          sbt release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}
+      - if: |
+          github.event.inputs.release-version == '' &&
+          github.event.inputs.next-version == ''
+        name: Release
+        env:
+          NEXUS_USER: ${{ secrets.NEXUS_USER }}
+          NEXUS_PW: ${{ secrets.NEXUS_PW }}
+          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_SECRET: ${{ secrets.PGP_SECRET }}
+          GIT_REF: ${{ matrix.branch }}
+        run: |
+          echo $PGP_SECRET | base64 --decode | gpg --batch --import
+          sbt release with-defaults
+      - name: Draft Release
+        uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
