--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
           git clean -f
-          sbt release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}
+          sbt 'release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}'
       - if: |
           github.event.inputs.release-version == '' &&
           github.event.inputs.next-version == ''
@@ -61,7 +61,7 @@ jobs:
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
           git clean -f
-          sbt release with-defaults
+          sbt 'release with-defaults'
       - name: Draft Release
         uses: release-drafter/release-drafter@v5
         env:
