--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,8 @@ jobs:
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
           git clean -f
+          git config --global user.email "xskipperci@gmail.com"
+          git config --global user.name "Xskipper CI"
           sbt 'release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}'
       - if: |
           github.event.inputs.release-version == '' &&
@@ -61,6 +63,8 @@ jobs:
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
           git clean -f
+          git config --global user.email "xskipperci@gmail.com"
+          git config --global user.name "Xskipper CI"
           sbt 'release with-defaults'
       - name: Draft Release
         uses: release-drafter/release-drafter@v5
