--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout Xskipper repository
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.CI_TOKEN }}
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
