--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
           architecture: x64
       - name: Install Python packages (Python 3.7)
         run: |
-          python3.7 -m pip install pyspark>=3.0.0
+          python3.7 -m pip install pyspark==3.0.1
       - name: Run sbt clean
         run: sbt ++2.12.8 clean
       - name: Run sbt compile
