--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,7 @@ jobs:
           git config --global user.name "Xskipper CI"
           # capture release version before doing release for site publishing
           SITE_VERSION=${{ github.event.inputs.release-version }}
+          [[ -z "$SITE_VERSION" ]] && echo "ERROR: SITE_VERSION var is empty" && exit -1
           sbt 'release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}'
           git push
       - if: |
@@ -72,6 +73,7 @@ jobs:
           git config --global user.name "Xskipper CI"
           # capture release version before doing release for site publishing
           SITE_VERSION=`sed -n 's/version in ThisBuild := "\(.*\)-SNAPSHOT"/\1/p' version.sbt`
+          [[ -z "$SITE_VERSION" ]] && echo "ERROR: SITE_VERSION var is empty" && exit -1
           sbt 'release with-defaults'
           git push
       - name: Publish site version
