--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,9 @@ jobs:
           git clean -f
           git config --global user.email "xskipperci@gmail.com"
           git config --global user.name "Xskipper CI"
+          # capture release version before doing release for site publishing
+          SITE_VERSION=${{ github.event.inputs.release-version }}
+          [[ -z "$SITE_VERSION" ]] && echo "ERROR: SITE_VERSION var is empty" && exit -1
           sbt 'release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}'
           git push
       - if: |
@@ -68,9 +71,13 @@ jobs:
           git clean -f
           git config --global user.email "xskipperci@gmail.com"
           git config --global user.name "Xskipper CI"
+          # capture release version before doing release for site publishing
+          SITE_VERSION=`sed -n 's/version in ThisBuild := "\(.*\)-SNAPSHOT"/\1/p' version.sbt`
+          [[ -z "$SITE_VERSION" ]] && echo "ERROR: SITE_VERSION var is empty" && exit -1
           sbt 'release with-defaults'
           git push
       - name: Publish site version
+        working-directory: ./site
         run: |
           pip install mkdocs-material
           pip install mkdocs-redirects
@@ -78,8 +85,8 @@ jobs:
           git config --global user.email "xskipperci@gmail.com"
           git config --global user.name "Xskipper CI"
           git fetch origin xskipper-site
-          mike deploy --push --remote origin --branch xskipper-site ${{ github.event.inputs.release-version }}
-          mike set-default --push --remote origin --branch xskipper-site ${{ github.event.inputs.release-version }}
+          mike deploy --push --remote origin --branch xskipper-site $SITE_VERSION
+          mike set-default --push --remote origin --branch xskipper-site $SITE_VERSION
       - name: Draft Release
         uses: release-drafter/release-drafter@v5
         env:
