--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,10 +49,10 @@ jobs:
         run: |
           python3.7 -m pip install pyspark==3.0.1
       - name: Run sbt clean
-        run: sbt ++2.12.8 clean
+        run: build/sbt ++2.12.8 clean
       - name: Run sbt compile
-        run: sbt ++2.12.8 compile
+        run: build/sbt ++2.12.8 compile
       - name: Run Scala tests
-        run: sbt ++2.12.8 test
+        run: build/sbt ++2.12.8 test
       - name: Run Python tests
         run: python3.7 run-tests.py
