Backport latest changes to branch Spark 2.3 (#57)
* fix PySpark version (#49)

* fix PySpark version

Signed-off-by: gallushi <gallushi@gmail.com>

* filter out the path/path list from the extracted relation options in IndexBuilder

Signed-off-by: gallushi <gallushi@gmail.com>

* fix set conf issue (#50)

Signed-off-by: Guy Khazma <guykhag@gmail.com>

* Add site versioning (#51)

* Add missing docs for site versioning (#52)

* Various fixes (#53)

* fix cache issue + build

Signed-off-by: Guy Khazma <guykhag@gmail.com>

* remove release drafter

Signed-off-by: Guy Khazma <guykhag@gmail.com>

Co-authored-by: Gal Lushi <45040041+gallushi@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,10 +54,10 @@ jobs:
           python3.7 -m pip install pypandoc
           python3.7 -m pip install "pyspark==2.3.2"
       - name: Run sbt clean, Scala 2.11.8
-        run: sbt ++2.11.8 clean
+        run: build/sbt ++2.11.8 clean
       - name: Run sbt compile, Scala 2.11.8
-        run: sbt ++2.11.8 compile
+        run: build/sbt ++2.11.8 compile
       - name: Run Scala tests, Scala 2.11.8
-        run: sbt ++2.11.8 test
+        run: build/sbt ++2.11.8 test
       - name: Run Python tests
         run: python3.7 run-tests.py
