--- a/.github/workflows/publish_snapshot.yml
+++ b/.github/workflows/publish_snapshot.yml
@@ -40,13 +40,13 @@ jobs:
           architecture: x64
       - name: Install Python packages (Python 3.7)
         run: |
-          python3.7 -m pip install pyspark>=3.0.0
+          python3.7 -m pip install pyspark==3.0.1
       - name: Run sbt clean
-        run: sbt ++2.12.8 clean
+        run: build/sbt ++2.12.8 clean
       - name: Run sbt compile
-        run: sbt ++2.12.8 compile
+        run: build/sbt ++2.12.8 compile
       - name: Run Scala tests
-        run: sbt ++2.12.8 test
+        run: build/sbt ++2.12.8 test
       - name: Run Python tests
         run: python3.7 run-tests.py
       - name: Publish snapshot
@@ -58,4 +58,4 @@ jobs:
           GIT_REF: ${{ matrix.branch }}
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
-          sbt ++2.12.8 publishSigned
+          build/sbt ++2.12.8 publishSigned
