--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
           export SITE_VERSION=${{ github.event.inputs.release-version }}
           [[ -z "$SITE_VERSION" ]] && echo "ERROR: SITE_VERSION var is empty" && exit -1
           # set the env variable to be available for the next step
-          echo "::set-env name=SITE_VERSION::$SITE_VERSION"
+          echo "SITE_VERSION=$SITE_VERSION" >> $GITHUB_ENV
           build/sbt 'release release-version ${{ github.event.inputs.release-version }} next-version ${{ github.event.inputs.next-version }}'
           git push
       - if: |
