--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -24,10 +24,12 @@ jobs:
         run: |
           pip install mkdocs-material
           pip install mkdocs-redirects
+          pip install mkdocs-markdownextradata-plugin
           pip install mike
       - name: Deploying Site
         working-directory: ./site
         run: |
+          export SITE_VERSION=`sed -n 's/version in ThisBuild := "\(.*\)"/\1/p' version.sbt`
           git config --global user.email "xskipperci@gmail.com"
           git config --global user.name "Xskipper CI"
           git fetch origin xskipper-site
