--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -70,7 +70,8 @@ markdown_extensions:
   - def_list
   - attr_list
   - pymdownx.highlight
-  - pymdownx.tabbed
+  - pymdownx.tabbed:
+      alternate_style: true
   - pymdownx.superfences
 
 # extra java script for math
