--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Deploying Site
         working-directory: ./site
         run: |
-          export SITE_VERSION=`sed -n 's/version in ThisBuild := "\(.*\)"/\1/p' version.sbt`
+          export SITE_VERSION=`sed -n 's/version in ThisBuild := "\(.*\)"/\1/p' ../version.sbt`
           echo "SITE_VERSION=$SITE_VERSION" >> $GITHUB_ENV
           git config --global user.email "xskipperci@gmail.com"
           git config --global user.name "Xskipper CI"
           git fetch origin xskipper-site
-          SITE_VERSION=$SITE_VERSION mike deploy --push --remote origin --branch xskipper-site master
+          mike deploy --push --remote origin --branch xskipper-site master
