--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -72,6 +72,7 @@ markdown_extensions:
   - pymdownx.highlight
   - pymdownx.tabbed:
       alternate_style: true
+  - pymdownx.superfences
 
 
 # extra java script for math
