--- a/site/mkdocs.yml
+++ b/site/mkdocs.yml
@@ -55,6 +55,7 @@ extra:
       link: https://github.com/xskipper-io
   extra_vars:
     version: !ENV [SITE_VERSION, '1.2.3-DUMMY']
+    stable_version: '1.3.0'
 
 # Extensions
 markdown_extensions:
