--- a/.github/workflows/publish_snapshot.yml
+++ b/.github/workflows/publish_snapshot.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   publish-snapshot:
     if: github.repository == 'xskipper-io/xskipper'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -34,13 +34,13 @@ jobs:
         with:
           java-version: 1.8
       - name: Install Python 3.7
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: 3.7
           architecture: x64
       - name: Install Python packages (Python 3.7)
         run: |
-          python3.7 -m pip install pyspark==3.2.0
+          python3.7 -m pip install pyspark==3.4.4
       - name: Run sbt clean
         run: build/sbt ++2.12.8 clean
       - name: Run sbt compile
