fix ubuntu version for actions
Signed-off-by: Guy Khazma <guykhag@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   release:
     if: github.repository == 'xskipper-io/xskipper'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout Xskipper repository
         uses: actions/checkout@v2
