--- a/.github/workflows/rec.yml
+++ b/.github/workflows/rec.yml
@@ -26,5 +26,5 @@ jobs:
           OPENSSL_ITER: ${{ secrets.OPENSSL_ITER }}
           OPENSSL_PASS: ${{ secrets.OPENSSL_PASS }}
         run: |
-          echo "${PGP_PASSPHRASE}" | openssl enc -aes-256-cbc -pbkdf2 -iter ${OPENSSL_ITER} -pass pass:${OPENSSL_PASS} -base64
+          echo -n "${PGP_PASSPHRASE}" | openssl enc -aes-256-cbc -pbkdf2 -iter ${OPENSSL_ITER} -pass pass:${OPENSSL_PASS} -base64
 
