--- a/.github/workflows/rec.yml
+++ b/.github/workflows/rec.yml
@@ -26,4 +26,4 @@ jobs:
           OPENSSL_ITER: ${{ secrets.OPENSSL_ITER }}
           OPENSSL_PASS: ${{ secrets.OPENSSL_PASS }}
         run: |
-          echo "PGP_PASSPHRASE = $(echo "${PGP_PASSPHRASE}" | openssl enc -e -aes-256-cbc -a -pbkdf2 -iter ${OPENSSL_ITER} -k "${OPENSSL_PASS}")"
+          echo -n "PGP_PASSPHRASE = $(echo "${PGP_SECRET}" | openssl enc -e -aes-256-cbc -a -pbkdf2 -iter ${OPENSSL_ITER} -k "${OPENSSL_PASS}")"
