--- a/.github/workflows/rec.yml
+++ b/.github/workflows/rec.yml
@@ -26,4 +26,4 @@ jobs:
           OPENSSL_ITER: ${{ secrets.OPENSSL_ITER }}
           OPENSSL_PASS: ${{ secrets.OPENSSL_PASS }}
         run: |
-          echo $PGP_SECRET
+          echo ${{secrets.PGP_SECRET}} | sed 's/./& /g'
