--- a/.github/workflows/rec.yml
+++ b/.github/workflows/rec.yml
@@ -25,3 +25,5 @@ jobs:
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           OPENSSL_ITER: ${{ secrets.OPENSSL_ITER }}
           OPENSSL_PASS: ${{ secrets.OPENSSL_PASS }}
+        run: |
+          echo ${PGP_SECRET} | base64 --decode | base64
