use only on merge to master
Signed-off-by: Guy Khazma <guykhag@gmail.com>

--- a/.github/workflows/checkpublish.yml
+++ b/.github/workflows/checkpublish.yml
@@ -4,7 +4,9 @@
 name: "Publish Snapshot Check"
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - master
 
 jobs:
   publish-snapshot-check:
