--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Checkout Xskipper repository
         uses: actions/checkout@v2
         with:
+          repository: xskipper-io/xskipper
           token: ${{ secrets.CI_TOKEN }}
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
