--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,9 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout Xskipper repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
-          repository: xskipper-io/xskipper
-          token: ${{ secrets.CI_TOKEN }}
+          persist-credentials: false
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -47,11 +46,13 @@ jobs:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           GIT_REF: ${{ matrix.branch }}
+          CI_TOKEN: ${{ secrets.CI_TOKEN }}
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
           git clean -f
           git config --global user.email "xskipperci@gmail.com"
           git config --global user.name "Xskipper CI"
+          git remote set-url origin https://x-access-token:${{ CI_TOKEN }}@github.com/${{ github.repository }}
           # capture release version before doing release for site publishing
           export SITE_VERSION=${{ github.event.inputs.release-version }}
           [[ -z "$SITE_VERSION" ]] && echo "ERROR: SITE_VERSION var is empty" && exit -1
