--- a/.github/workflows/checkpublish.yml
+++ b/.github/workflows/checkpublish.yml
@@ -40,4 +40,4 @@ jobs:
           GIT_REF: ${{ matrix.branch }}
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
-          build/sbt ++2.12.8 publishSigned
+          build/sbt publishSigned
