--- a/.github/workflows/checkpublish.yml
+++ b/.github/workflows/checkpublish.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 17
+          distribution: semeru
       - name: Publish snapshot
         env:
           NEXUS_USER: ${{ secrets.NEXUS_TOKEN_USER_NAME }}
