update github workflow java version
Signed-off-by: Guy Khazma <guykhag@gmail.com>

--- a/.github/workflows/checkpublish.yml
+++ b/.github/workflows/checkpublish.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: semeru
+          distribution: adopt
       - name: Publish snapshot
         env:
           NEXUS_USER: ${{ secrets.NEXUS_TOKEN_USER_NAME }}
