--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: semeru
+          distribution: adopt
       - name: Install Python 3.8
         uses: actions/setup-python@v5
         with:
