--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,23 +36,24 @@ jobs:
           key: coursier-${{ hashFiles('**/pom.xml', '**/plugins.sbt') }}
           restore-keys: |
             coursier-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.8
-      - name: Install Python 3.8
+          java-version: 17
+          distribution: adopt
+      - name: Install Python 3.9
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: 3.9
           architecture: x64
-      - name: Install Python packages (Python 3.8)
+      - name: Install Python packages (Python 3.9)
         run: |
-          python3.8 -m pip install pyspark==3.5.4
+          python3.9 -m pip install pyspark==4.0.0
       - name: Run sbt clean
-        run: build/sbt ++2.12.8 clean
+        run: build/sbt clean
       - name: Run sbt compile
-        run: build/sbt ++2.12.8 compile
+        run: build/sbt compile
       - name: Run Scala tests
-        run: build/sbt ++2.12.8 test
+        run: build/sbt test
       - name: Run Python tests
-        run: python3.8 run-tests.py
+        run: python3.9 run-tests.py
