--- a/.github/workflows/checkpublish.yml
+++ b/.github/workflows/checkpublish.yml
@@ -27,10 +27,11 @@ jobs:
           key: snapshot-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             snapshot-maven-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.8
+          java-version: 17
+          distribution: adopt
       - name: Publish snapshot
         env:
           NEXUS_USER: ${{ secrets.NEXUS_TOKEN_USER_NAME }}
@@ -40,4 +41,4 @@ jobs:
           GIT_REF: ${{ matrix.branch }}
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
-          build/sbt ++2.12.8 publishSigned
+          build/sbt publishSigned
