--- a/.github/workflows/publish_snapshot.yml
+++ b/.github/workflows/publish_snapshot.yml
@@ -29,26 +29,27 @@ jobs:
           key: snapshot-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             snapshot-maven-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.8
-      - name: Install Python 3.8
+          java-version: 17
+          distribution: adopt
+      - name: Install Python 3.9
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: 3.9
           architecture: x64
-      - name: Install Python packages (Python 3.8)
+      - name: Install Python packages (Python 3.9)
         run: |
-          python3.8 -m pip install pyspark==3.5.4
+          python3.9 -m pip install pyspark==4.0.0
       - name: Run sbt clean
-        run: build/sbt ++2.12.8 clean
+        run: build/sbt clean
       - name: Run sbt compile
-        run: build/sbt ++2.12.8 compile
+        run: build/sbt compile
       - name: Run Scala tests
-        run: build/sbt ++2.12.8 test
+        run: build/sbt test
       - name: Run Python tests
-        run: python3.8 run-tests.py
+        run: python3.9 run-tests.py
       - name: Publish snapshot
         env:
           NEXUS_USER: ${{ secrets.NEXUS_TOKEN_USER_NAME }}
@@ -58,4 +59,4 @@ jobs:
           GIT_REF: ${{ matrix.branch }}
         run: |
           echo $PGP_SECRET | base64 --decode | gpg --batch --import
-          build/sbt ++2.12.8 publishSigned
+          build/sbt publishSigned
