--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,20 +22,21 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.8
-      - name: Install Python 3.8
+          java-version: 17
+          distribution: adopt
+      - name: Install Python 3.9
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: 3.9
           architecture: x64
-      - name: Install Python packages (Python 3.8)
+      - name: Install Python packages (Python 3.9)
         run: |
-          python3.8 -m pip install pyspark==3.5.4
+          python3.9 -m pip install pyspark==4.0.0
       - name: Run Python tests
-        run: python3.8 run-tests.py
+        run: python3.9 run-tests.py
       - if: |
           github.event.inputs.release-version != '' &&
           github.event.inputs.next-version != ''
